# rag-assistant

./: .cursorignore  .cusorrules  .gitignore  .npmrc  CHANGES.md  Makefile  QUICKSTART.md  README.md  concept.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  todo.md  tsconfig.app.tsbuildinfo
apps/backend-orchestrator/: .env.example  Cargo.toml  package.json
apps/backend-orchestrator/src/: error.rs  main.rs  models.rs
apps/backend-orchestrator/src/ingestion/: chunker.rs  mod.rs  parser.rs  pipeline.rs
apps/backend-orchestrator/src/rag/: generation.rs  mod.rs  retrieval.rs
apps/backend-orchestrator/src/services/: embedding.rs  llm.rs  meilisearch.rs  mod.rs
apps/frontend/: nginx.conf  package.json  pnpm-lock.yaml
apps/frontend/src/: App.vue
apps/frontend/src/components/: AppLayout.vue  ChatMessage.vue  DocumentUpload.vue  ManualInput.vue  TaskStatus.vue
apps/frontend/src/router/: index.ts
apps/frontend/src/services/: api.ts
apps/frontend/src/types/: index.ts
apps/frontend/src/views/: AdminView.vue  ChatView.vue
docker/: .env.example  README.md  backend.Dockerfile  docker-compose.yml  frontend.Dockerfile  llm-inference.Dockerfile
docs/: ARCHITECTURE.md  DEPLOYMENT.md  PROJECT_STRUCTURE.md  README.md
services/embedding-api/: README.md  download_model.sh  entrypoint.sh  server_config.sh
services/llm-inference/: README.md  download_model.sh  entrypoint.sh  server_config.sh
services/meilisearch/: README.md  init_meilisearch.sh  meilisearch.toml
src/: App.vue  style.css
src/components/: ChatMessage.vue  DocumentUpload.vue  ManualInput.vue  MarkdownEditor.vue  MarkdownPreview.vue  SourceAttribution.vue  TaskStatus.vue
src/router/: index.ts
src/views/: AdminView.vue  ChatView.vue
