[package]
name = "rag-backend-orchestrator"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web Framework
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTTP Client für Service-Kommunikation
reqwest = { version = "0.11", features = ["json", "multipart", "stream"] }

# Environment & Config
dotenv = "0.15"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# RAG Pipeline Dependencies
meilisearch-sdk = "0.25"
async-openai = "0.20"
text-splitter = "0.20"
pulldown-cmark = "0.10"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = "0.1"
bytes = "1.0"
mime = "0.3"
async-stream = "0.3"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "0.4"
