[package]
name = "rag-backend-orchestrator"
version = "1.0.0"
edition = "2024"

[dependencies]
# Web Framework
axum = { version = "^0.8.6", features = ["multipart"]}
tokio = { version = "^1.48", features = ["full"] }
tower = "^0.5.2"
tower-http = { version = "^0.6.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"

# HTTP Client für Service-Kommunikation
reqwest = { version = "^0.12", features = ["json", "multipart", "stream"] }

# Logging
tracing = "^0.1"
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

# Error Handling
anyhow = "^1.0"
thiserror = "^2.0"

# RAG Pipeline Dependencies
meilisearch-sdk = "0.30"
async-openai = "^0.29"
text-splitter = "^0.28"
pulldown-cmark = "^0.13"
uuid = { version = "^1.18", features = ["v7", "serde"] }
futures = "^0.3"
tokio-stream = "^0.1"
bytes = "^1.10"
mime = "^0.3"
async-stream = "^0.3"
chrono = { version = "^0.4", features = ["serde"] }

[dev-dependencies]
# Testing
tokio-test = "^0.4"
